--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
+    "commit": "cz",
     "coverage:open": "open ./coverage/lcov-report/index.html",
     "db:reset": "ts-node -r tsconfig-paths/register scripts/db-seed/reset.ts",
     "db:seed": "ts-node -r tsconfig-paths/register scripts/db-seed/seed.ts",
@@ -14,6 +15,7 @@
     "db:test": "ts-node -r tsconfig-paths/register scripts/db-seed/test-connection.ts",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "prepare": "husky",
     "start": "nest start",
     "start:debug": "nest start --debug --watch",
     "start:dev": "nest start --watch",
@@ -22,9 +24,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "test:watch": "jest --watch",
-    "commit": "cz",
-    "prepare": "husky"
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
