--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
         run: npm run lint
 
       - name: Run Unit Tests
-        run: npm test
+        run: npm run test:cov
 
       - name: Upload Coverage Report
         uses: actions/upload-artifact@v4
