--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm run lint
 
       - name: Run Unit Tests
-        run: npm test
+        run: npm run test:cov
 
       - name: Build Application
         run: npm run build
