--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -43,7 +43,7 @@ jobs:
         run: npm ci
 
       - name: Run Jest Tests
-        run: npm run test
+        run: npm run test:cov
 
       - name: Upload Coverage Report
         uses: actions/upload-artifact@v4
