--- a/cloudformation/crow-detector-security-groups.yaml
+++ b/cloudformation/crow-detector-security-groups.yaml
@@ -57,8 +57,20 @@ Resources:
             - 76.115.125.73/32
             - 0.0.0.0/1
       SecurityGroupEgress:
-        - IpProtocol: -1
-          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 443
+          ToPort: 443
+          DestinationSecurityGroupId: !If 
+            - IsDev
+            - !ImportValue crow-detector-vpce-sg-dev
+            - !ImportValue crow-detector-vpce-sg-prod
+        - IpProtocol: tcp
+          FromPort: 5432
+          ToPort: 5432
+          DestinationSecurityGroupId: !If 
+            - IsDev
+            - !ImportValue crow-detector-db-sg-dev
+            - !ImportValue crow-detector-db-sg-prod
 
 Outputs:
   DatabaseSecurityGroupId:
