--- a/cloudformation/crow-detector-rds.yaml
+++ b/cloudformation/crow-detector-rds.yaml
@@ -1,57 +1,64 @@
 AWSTemplateFormatVersion: '2010-09-09'
+Description: 'Crow Detector RDS Database in aws-infra VPC'
 
 Parameters:
   Environment:
     Type: String
-    Description: Environment name (dev or prod)
-    Default: dev
-    AllowedValues:
-      - dev
-      - prod
-
-Conditions:
-  IsDev: !Equals [!Ref Environment, 'dev']
+    Default: 'dev'
+    AllowedValues: ['dev', 'prod']
+    Description: 'Environment name'
+    
+  DatabaseInstanceClass:
+    Type: String
+    Default: 'db.t3.micro'
+    AllowedValues: ['db.t3.micro', 'db.t3.small', 'db.t3.medium', 'db.r5.large']
+    Description: 'Database instance class'
 
 Resources:
-  PostgresDB:
+  DatabaseInstance:
     Type: AWS::RDS::DBInstance
     DeletionPolicy: Snapshot
     UpdateReplacePolicy: Snapshot
     Properties:
       DBInstanceIdentifier: !Sub 'crow-detector-db-${Environment}'
-      AllocatedStorage: 20
-      DBInstanceClass: db.t3.micro
-      Engine: postgres
-      EngineVersion: "17.5"
+      DBInstanceClass: !Ref DatabaseInstanceClass
+      Engine: 'postgres'
+      EngineVersion: '17.5'
+      DBName: !Sub 'crow_detector_db_${Environment}'
       MasterUsername: !Sub '{{resolve:secretsmanager:crow-detector-db-${Environment}:SecretString:username}}'
       MasterUserPassword: !Sub '{{resolve:secretsmanager:crow-detector-db-${Environment}:SecretString:password}}'
-      DBName: !Sub 'crow_detector_db_${Environment}'
-      PubliclyAccessible: !If [IsDev, true, false]
-      StorageType: gp2
-      BackupRetentionPeriod: !If [IsDev, 1, 7]
-      MultiAZ: !If [IsDev, false, true]
-      StorageEncrypted: !If [IsDev, false, true]
+      DBSubnetGroupName: !ImportValue 'aws-infra-rds-subnet-group-name'
       VPCSecurityGroups:
-        - !If 
-          - IsDev
-          - !ImportValue crow-detector-db-sg-dev
-          - !ImportValue crow-detector-db-sg-prod
+        - !ImportValue 'aws-infra-db-sg-id'
+      AllocatedStorage: 20
+      StorageType: gp2
+      StorageEncrypted: true
+      BackupRetentionPeriod: 7
+      MultiAZ: false
+      PubliclyAccessible: false
+      Tags:
+        - Key: Name
+          Value: !Sub 'crow-detector-db-${Environment}'
+        - Key: Environment
+          Value: !Ref Environment
+        - Key: Project
+          Value: 'crow-detector'
 
 Outputs:
   DatabaseEndpoint:
-    Description: The endpoint of the RDS database
-    Value: !GetAtt PostgresDB.Endpoint.Address
+    Description: 'Database connection endpoint'
+    Value: !GetAtt DatabaseInstance.Endpoint.Address
     Export:
-      Name: !Sub 'crow-detector-rds-${Environment}-DatabaseEndpoint'
+      Name: !Sub 'crow-detector-db-${Environment}-endpoint'
   
   DatabasePort:
-    Description: The port of the RDS database
-    Value: !GetAtt PostgresDB.Endpoint.Port
+    Description: 'Database port'
+    Value: !GetAtt DatabaseInstance.Endpoint.Port
     Export:
-      Name: !Sub 'crow-detector-rds-${Environment}-DatabasePort'
+      Name: !Sub 'crow-detector-db-${Environment}-port'
   
   DatabaseName:
-    Description: The name of the RDS database
+    Description: 'Database name'
     Value: !Sub 'crow_detector_db_${Environment}'
     Export:
-      Name: !Sub 'crow-detector-rds-${Environment}-DatabaseName'
+      Name: !Sub 'crow-detector-db-${Environment}-name'
