fix: fix template for ECS

--- a/cloudformation/crow-detector-ecs-task.yaml
+++ b/cloudformation/crow-detector-ecs-task.yaml
@@ -22,8 +22,8 @@ Mappings:
         - !ImportValue 'aws-infra-private-subnet-3-id'
       SecurityGroupExport: aws-infra-ecs-sg-id
       LogLevel: 'info'
-      Cpu: '256'
-      Memory: '512'
+      Cpu: 256
+      Memory: 512
     prod:
       Subnets:
         - !ImportValue 'aws-infra-private-subnet-1-id'
@@ -31,8 +31,8 @@ Mappings:
         - !ImportValue 'aws-infra-private-subnet-3-id'
       SecurityGroupExport: aws-infra-ecs-sg-id
       LogLevel: 'warn'
-      Cpu: '512'
-      Memory: '1024'
+      Cpu: 512
+      Memory: 1024
 
 Conditions:
   IsDev: !Equals [!Ref Environment, 'dev']
@@ -96,7 +96,7 @@ Resources:
       ServiceName: !Sub 'crow-detector-service-${Environment}'
       Cluster: !Sub 'crow-detector-${Environment}'
       TaskDefinition: !Ref TaskDefinition
-      DesiredCount: !If [IsDev, 1, 2]
+      DesiredCount: 1
       LaunchType: FARGATE
       LoadBalancers:
         - TargetGroupArn: !If 
@@ -110,7 +110,10 @@ Resources:
           AssignPublicIp: DISABLED
           SecurityGroups:
             - !ImportValue 'aws-infra-ecs-sg-id'
-          Subnets: !FindInMap [EnvConfig, !Ref Environment, Subnets]
+          Subnets:
+            - !ImportValue 'aws-infra-private-subnet-1-id'
+            - !ImportValue 'aws-infra-private-subnet-2-id'
+            - !ImportValue 'aws-infra-private-subnet-3-id'
 
 Outputs:
   TaskDefinitionArn:
