--- a/cloudformation/crow-detector-alb.yaml
+++ b/cloudformation/crow-detector-alb.yaml
@@ -22,8 +22,8 @@ Resources:
       Type: application
       IpAddressType: ipv4
       Subnets:
-        - !ImportValue 'aws-infra-public-subnet-id'  # Public subnet from aws-infra
-        - !ImportValue 'aws-infra-private-subnet-1-id'  # Second subnet for ALB requirement
+        - !ImportValue 'aws-infra-public-subnet-1-id'  # Public subnet us-west-2a
+        - !ImportValue 'aws-infra-public-subnet-2-id'  # Public subnet us-west-2b
       SecurityGroups:
         - !ImportValue 'aws-infra-alb-sg-id'  # Use aws-infra ALB security group
 
