--- a/cloudformation/crow-detector-ecs-task.yaml
+++ b/cloudformation/crow-detector-ecs-task.yaml
@@ -17,16 +17,20 @@ Mappings:
   EnvConfig:
     dev:
       Subnets:
-        - !ImportValue 'aws-infra-private-subnet-1-id'  # us-west-2c
-        - !ImportValue 'aws-infra-private-subnet-2-id'  # us-west-2d
+        - !ImportValue 'aws-infra-private-subnet-1-id'  # us-west-2a
+        - !ImportValue 'aws-infra-private-subnet-2-id'  # us-west-2b
+        - !ImportValue 'aws-infra-private-subnet-3-id'  # us-west-2c
+        - !ImportValue 'aws-infra-private-subnet-4-id'  # us-west-2d
       SecurityGroupExport: aws-infra-ecs-sg-id
       LogLevel: 'info'
       Cpu: 256
       Memory: 512
     prod:
       Subnets:
-        - !ImportValue 'aws-infra-private-subnet-1-id'  # us-west-2c
-        - !ImportValue 'aws-infra-private-subnet-2-id'  # us-west-2d
+        - !ImportValue 'aws-infra-private-subnet-1-id'  # us-west-2a
+        - !ImportValue 'aws-infra-private-subnet-2-id'  # us-west-2b
+        - !ImportValue 'aws-infra-private-subnet-3-id'  # us-west-2c
+        - !ImportValue 'aws-infra-private-subnet-4-id'  # us-west-2d
       SecurityGroupExport: aws-infra-ecs-sg-id
       LogLevel: 'warn'
       Cpu: 512
@@ -109,8 +113,10 @@ Resources:
           SecurityGroups:
             - !ImportValue 'aws-infra-ecs-sg-id'
           Subnets:
-            - !ImportValue 'aws-infra-private-subnet-1-id'  # us-west-2c
-            - !ImportValue 'aws-infra-private-subnet-2-id'  # us-west-2d
+            - !ImportValue 'aws-infra-private-subnet-1-id'  # us-west-2a
+            - !ImportValue 'aws-infra-private-subnet-2-id'  # us-west-2b
+            - !ImportValue 'aws-infra-private-subnet-3-id'  # us-west-2c
+            - !ImportValue 'aws-infra-private-subnet-4-id'  # us-west-2d
 
 Outputs:
   TaskDefinitionArn:
