--- a/cloudformation/crow-detector-ecs-task.yaml
+++ b/cloudformation/crow-detector-ecs-task.yaml
@@ -72,6 +72,12 @@ Resources:
               Value: !ImportValue 'crow-detector-db-dev-endpoint'
             - Name: RDS_DATABASE
               Value: !ImportValue 'crow-detector-db-dev-name'
+            - Name: PI_USER_PUBLIC_KEY
+              Value: !Sub '{{resolve:secretsmanager:crow-detector-keys:SecretString:pi-user-public-key}}'
+            - Name: PI_MOTION_PUBLIC_KEY
+              Value: !Sub '{{resolve:secretsmanager:crow-detector-keys:SecretString:pi-motion-public-key}}'
+            - Name: PI_FEEDER_PUBLIC_KEY
+              Value: !Sub '{{resolve:secretsmanager:crow-detector-keys:SecretString:pi-feeder-public-key}}'
           Secrets:
             - Name: RDS_USERNAME
               ValueFrom: !Sub 'arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:crow-detector-db-${Environment}:username::'
