--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@nestjs/platform-fastify": "^11.1.5",
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/crypto-js": "^4.2.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "crypto-js": "^4.2.0",
     "dotenv": "^17.2.1",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
@@ -71,7 +73,6 @@
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0"
   },
-
   "config": {
     "commitizen": {
       "path": "cz-conventional-changelog"
