--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "prepare": "husky",
     "start": "nest start",
     "start:debug": "nest start --debug --watch",
-    "start:dev": "concurrently \"npm run start:tunnel\" \"npm run start:watch\"",
+    "start:dev": "NODE_ENV=development concurrently \"npm run start:tunnel\" \"npm run start:watch\"",
     "start:prod": "node dist/main",
     "start:tunnel": "node scripts/tunnel.js -l 5432 -r 5432 -d crow-detector-db-dev.c32e8eak8kj0.us-west-2.rds.amazonaws.com",
     "start:watch": "nest start --watch",
