--- a/cloudformation/crow-detector-s3.yaml
+++ b/cloudformation/crow-detector-s3.yaml
@@ -53,18 +53,18 @@ Resources:
             Effect: Deny
             Principal: '*'
             Action: s3:PutObject
-            Resource: !Sub '${CrowDetectorImagesBucket}/*'
+            Resource: !Sub '${CrowDetectorImagesBucket.Arn}/*'
             Condition:
               StringNotEquals:
-                s3:x-amz-server-side-encryption: AES256
-          - Sid: DenyUnencryptedObjectUploads
+                's3:x-amz-server-side-encryption': 'AES256'
+          - Sid: DenyObjectUploadsWithoutEncryption
             Effect: Deny
             Principal: '*'
             Action: s3:PutObject
-            Resource: !Sub '${CrowDetectorImagesBucket}/*'
+            Resource: !Sub '${CrowDetectorImagesBucket.Arn}/*'
             Condition:
-              StringEquals:
-                s3:x-amz-server-side-encryption: ''
+              'Null':
+                's3:x-amz-server-side-encryption': 'true'
 
 Outputs:
   BucketName:
