fix: fix tokens so they are base 64 encoded

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "auth:token": "node scripts/generate-auth-token.js",
     "build": "nest build",
     "commit": "cz",
     "coverage:open": "open ./coverage/lcov-report/index.html",
