--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "@nestjs/platform-fastify": "^11.1.5",
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/bunyan": "^1.8.11",
     "@types/crypto-js": "^4.2.2",
+    "bunyan": "^1.8.15",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "crypto-js": "^4.2.0",
