--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.872.0",
+    "@aws-sdk/client-secrets-manager": "^3.873.0",
     "@aws-sdk/s3-request-presigner": "^3.872.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
