--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "db:synchronize": "ts-node -r tsconfig-paths/register scripts/db-seed/synchronize.ts",
     "db:test": "ts-node -r tsconfig-paths/register scripts/db-seed/test-connection.ts",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "lambda:build": "cd lambda && npm run build",
+    "lambda:test": "cd lambda && npm test",
+    "lambda:package": "cd lambda && npm run package",
+    "lambda:clean": "cd lambda && npm run clean",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint:lambda": "cd lambda && npm run lint",
     "prepare": "husky",
     "start": "nest start",
     "start:debug": "nest start --debug --watch",
