--- a/.github/workflows/pull-request-lambda.yml
+++ b/.github/workflows/pull-request-lambda.yml
@@ -1,83 +1,95 @@
-name: Lambda PR Checks
+name: Pull Request - Lambda
 
 on:
   pull_request:
+    branches:
+      - main
     paths:
       - 'lambda/**'
-      - '.github/workflows/lambda-pr.yml'
+      - '.github/workflows/pull-request-lambda.yml'
 
 jobs:
-  test-lambda:
-    name: Test Lambda Function
+  build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v4
-
-      - name: Setup Node.js
+        
+      - name: Install Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: lambda/package-lock.json
+          cache-dependency-path: 'lambda/package-lock.json'
 
-      - name: Install Lambda Dependencies
-        working-directory: ./lambda
+      - name: Install Dependencies
+        working-directory: lambda
         run: npm ci
 
-      - name: Lint Lambda Code
-        working-directory: ./lambda
+      - name: Build & Package Lambda
+        working-directory: lambda
+        run: |
+          export NODE_ENV=dev
+          npm run build
+          npm run package
+
+  lint:
+    name: Lint Code
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: 'lambda/package-lock.json'
+
+      - name: Install Dependencies
+        working-directory: lambda
+        run: npm ci
+
+      - name: Run Linting
+        working-directory: lambda
         run: npm run lint
 
-      - name: Run Lambda Unit Tests
-        working-directory: ./lambda
-        run: npm test
+  test:
+    name: Run Unit Tests
+    needs: lint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: 'lambda/package-lock.json'
+
+      - name: Install Dependencies
+        working-directory: lambda
+        run: npm ci
+
+      - name: Run Jest Tests
+        working-directory: lambda
+        run: npm run test
 
       - name: Upload Coverage Report
         uses: actions/upload-artifact@v4
         with:
-          name: lambda-coverage-report
+          name: coverage-report
           path: lambda/coverage
           retention-days: 7
 
       - name: Coverage Threshold Check
-        working-directory: ./lambda
+        working-directory: lambda
         run: |
           if [[ $(grep "Statements" coverage/lcov-report/index.html | awk '{print $4}' | tr -d '%') -lt 80 ]]; then
             echo "Code coverage is below threshold. Please update test coverage and try again."
             exit 1
           fi
-
-  build-lambda:
-    name: Build Lambda Package
-    runs-on: ubuntu-latest
-    needs: test-lambda
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: lambda/package-lock.json
-
-      - name: Install Lambda Dependencies
-        working-directory: ./lambda
-        run: npm ci
-
-      - name: Build Lambda
-        working-directory: ./lambda
-        run: npm run build
-
-      - name: Package Lambda
-        working-directory: ./lambda
-        run: npm run package
-
-      - name: Upload Build Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: lambda-build
-          path: lambda/dist
-          retention-days: 1
